--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
@@ -34,6 +35,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "recharts": "^3.1.2",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "ua-parser-js": "^2.0.4",
