--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.539.0",
-    "next": "15.4.6",
+    "next": "^16.0.7",
     "next-share": "^0.27.0",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
